# bootcamp_python

./: README.md
aula_01/: README.md  desafio_aula_01.py  exemplo_00.py  exercicio_01.py  exercicio_02.py
aula_02/: desafio_aula_02.py  exercicios.py
aula_03/: desafio_aula_03.py  exercicios_aula_03.py
aula_04/: algoritmo_aplicacao.py  arquivos.py  exercicio_aula_04.py  exercicios.py  funcoes.py  main.py
aula_06/: .pre-commit-config.yaml  pyproject.toml
aula_07/: etl.py  exemplo_00.py  main.py
aula_08/: dados.parquet  etl.py  pipeline.py  pyproject.toml  teste_etl.py
aula_09/: dados.csv  etl.py  exemplo_01.py  exemplo_02.py  loggin_exemplo_errors.py  pyproject.toml  tenacity_exemplo.py  timer_exemplo.py  utils_log.py
aula_11/: exemplo.csv  pyproject.toml
aula_12/: csv_class.py  exemplo.csv  pyproject.toml
aula_16/: database.db  pyproject.toml
aula_17/: desafio.py  exemplo_01.py  meubanco.db  pyproject.toml
aula_18/: exemplo_01.py  exemplo_02.py  exemplo_03.py  pyproject.toml
aula_18/src/: models.py  pokemon.db
aula_19/: main.py  pyproject.toml  test.db
