[project]
name = "aula-17"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Salles", email = "gs.amaral20@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

